--- a/frontend-toolAI/src/menu.html
+++ b/frontend-toolAI/src/menu.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Menu chức năng</title>
-  <link rel="stylesheet" href="../frontend-toolAI/CSS/stylemenu.css">
+  <link rel="stylesheet" href="../CSS/stylemenu.css">
 </head>
 <body>
   <div class="container">
