--- a/frontend-toolAI/src/TTS.html
+++ b/frontend-toolAI/src/TTS.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chuyển văn bản thành giọng nói</title>
   <link rel="stylesheet" href="../CSS/styleTTS.css" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
   <div class="container">
@@ -15,6 +17,9 @@
       <div class="form-left">
         <label for="language">Ngôn ngữ</label>
         <select id="language">
+          <option>Tiếng Việt</option>
+          <option>Tiếng Việt</option>
+          <option>Tiếng Việt</option>
           <option>Tiếng Việt</option>
         </select>
       
@@ -68,7 +73,7 @@
           <option>1.5x</option>
         </select>
 
-        <label for="text" class="required">📕 Nhập đoạn văn bản</label>
+        <label for="text" class="required">Nhập đoạn văn bản</label>
         <textarea id="text" rows="10">Ẩm thực Việt Nam không chỉ ngon mà còn khiến cả thế giới mê mẩn. Trong video hôm nay, cùng mình điểm qua 5 món...</textarea>
       </div>
     </div>
@@ -78,7 +83,7 @@
     </div>
 
     <div class="player">
-      <button class="play-btn">▶️</button>
+      <button class="play-btn"><i class="fa-solid fa-play"></i></button>
       <span>00:50</span>
       <input type="range" min="0" max="240" value="50">
       <span>04:00</span>
