Create title and script
Giao diện chức năng 1 và 2

--- a/frontend-toolAI/src/menu.html
+++ b/frontend-toolAI/src/menu.html
@@ -5,19 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Menu chức năng</title>
   <link rel="stylesheet" href="../CSS/stylemenu.css">
+  <script src="../JavaScript/menu.js"></script>
 </head>
 <body>
   <div class="container">
     <h1>🧲 <span class="title">Menu chức năng</span></h1>
     
     <div class="cards">
-      <div class="card">
-        <div class="icon">🚀</div>
-        <div class="content">
-          <h3>Gợi ý tiêu đề thu hút</h3>
-          <p>Đưa ra nội dung video, từ đó gợi ý tiêu đề làm thu hút người xem.</p>
-        </div>
+      <a href="#" id="goto-create-title" class="card">
+      <div class="icon">🚀</div>
+      <div class="content">
+        <h3>Gợi ý tiêu đề thu hút</h3>
+        <p>Đưa ra nội dung video, từ đó gợi ý tiêu đề làm thu hút người xem.</p>
       </div>
+    </a>
 
       <div class="card">
         <div class="icon">🎨</div>
@@ -46,3 +47,4 @@
   </div>
 </body>
 </html>
+
