--- a/frontend-toolAI/src/login.html
+++ b/frontend-toolAI/src/login.html
@@ -19,9 +19,11 @@
         <label>Mật khẩu</label>
         <input type="password" placeholder="Mật khẩu" id="password-login" />
 
-        <button onclick="login()">Đăng Nhập</button>
+        <!-- <button onclick="login()">Đăng Nhập</button> -->
 
         <p>Chưa có tài khoản? <a href="../src/register.html">Đăng ký</a></p>
+        <a href="menu.html"><button>Đăng Nhập</button></a>
+
       </div>
     </div>
 
