--- a/frontend-toolAI/src/menu.html
+++ b/frontend-toolAI/src/menu.html
@@ -12,6 +12,7 @@
     <h1>🧲 <span class="title">Menu chức năng</span></h1>
     
     <div class="cards">
+
       <a href="#" id="goto-create-title" class="card">
       <div class="icon">🚀</div>
       <div class="content">
@@ -20,29 +21,30 @@
       </div>
     </a>
 
-      <div class="card">
-        <div class="icon">🎨</div>
-        <div class="content">
-          <h3>Gợi ý kịch bản video</h3>
-          <p>Đưa ra tiêu đề video, sau đó gợi ý kịch bản video phù hợp.</p>
-        </div>
+      <a href="#" id="goto-create_script" class="card">
+      <div class="icon">🎨</div>
+      <div class="content">
+        <h3>Gợi ý kịch bản video</h3>
+        <p>Đưa ra tiêu đề video, sau đó gợi ý kịch bản video phù hợp.</p>
       </div>
+    </a>
 
-      <div class="card">
-        <div class="icon">🕒</div>
-        <div class="content">
-          <h3>Nhập link video → transcript → tái tạo kịch bản</h3>
-          <p>Nhập link YouTube, lấy transcript và viết lại kịch bản video.</p>
-        </div>
+      <a href="#" id="goto-transcript" class="card">
+      <div class="icon">🕒</div>
+      <div class="content">
+        <h3>Nhập link video → transcript → tái tạo kịch bản</h3>
+        <p>Nhập link YouTube, lấy transcript và viết lại kịch bản video.</p>
       </div>
+    </a>
 
-      <div class="card">
-        <div class="icon">🔍</div>
-        <div class="content">
-          <h3>Chuyển văn bản thành giọng nói</h3>
-          <p>Nhập đoạn văn bản và chuyển thành giọng nói, tải về dạng mp3, wav.</p>
-        </div>
+      <a href="#" id="goto-TTS" class="card">
+      <div class="icon">🔍</div>
+      <div class="content">
+        <h3>Chuyển văn bản thành giọng ói</h3>
+        <p>Nhập đoạn văn bản và chuyển thành giọng nói, tải về dạng mp3, wav.</p>
       </div>
+    </a>
+
     </div>
   </div>
 </body>
